src/pages/viewkey/viewKey.css
.viewMnemoincContainer {
  display: flex;
  flex-direction: column;
  flex: 1;
  position: relative;
  overflow: hidden;
}
.viewMnemoincContainer .warning1 {
  width: 95%;
  font-size: 25px;
  margin: auto auto 0;
  text-align: center;
}
.viewMnemoincContainer .warning2 {
  width: 95%;
  font-size: 20px;
  margin: 0 auto;
  text-align: center;
  color: red;
  font-weight: 300;
  margin-bottom: 20px;
}
.viewMnemoincContainer .mnemoincContainer {
  max-height: 362px;
  overflow-y: scroll;
  scrollbar-width: auto;
  display: flex;
  justify-content: center;
}
.viewMnemoincContainer .keyContainer {
  width: 95%;
}
.viewMnemoincContainer .mnemoincContainer .qrCodeWraperContainer {
  width: 100%;
  height: 362px;
  display: flex;
  align-items: center;
  justify-content: center;
}

.viewMnemoincContainer .mnemoincContainer::-webkit-scrollbar {
  width: 8px;
  display: flex;
}

.viewMnemoincContainer .mnemoincContainer::-webkit-scrollbar-thumb {
  background-color: rgba(0, 0, 0, 0.3);
  border-radius: 4px;
}
.viewMnemoincContainer .mnemoincCover {
  position: absolute;
  background-color: var(--lightModeBackground);
  width: 100%;
  height: 100%;
  top: 0;
  left: 0;
  transition: top 0.8s ease-in-out;
  display: flex;
  flex-direction: column;
  z-index: 99;
}
.viewMnemoincContainer .mnemoincCover .coverContent {
  flex: 1;
  align-items: center;
  justify-content: center;
  display: flex;
  flex-direction: column;
}
.viewMnemoincContainer .mnemoincCover .coverContent .viewMnemoincText {
  font-size: 20px;
  text-align: center;
}
.viewMnemoincContainer .mnemoincCover .coverContent .buttonContianer {
  width: 95%;
  max-width: 250px;
  display: grid;
  column-gap: 10px;
  grid-template-columns: 1fr 1fr;
}
.viewMnemoincContainer
  .mnemoincCover
  .coverContent
  .buttonContianer
  button:first-child {
  background-color: var(--primaryBlue);
  color: white;
}

.viewMnemoincContainer .switchContainer {
  width: 200px;
  margin: 20px auto;
  display: flex;
  align-items: center;
  justify-content: space-between;
  border: 1px solid gainsboro;
  padding: 10px 0;
  border-radius: 50px;
  position: relative;
}
.viewMnemoincContainer .optionSlider {
  height: 85%;
  width: 95px;
  position: absolute;
  left: 5px;
  top: 50%;
  transform: translateY(-50%);
  z-index: 10;
  border-radius: 50px;
  transition: left 0.5s ease-in-out;
}
.viewMnemoincContainer .switchContainer p {
  margin: 0;
  position: relative;
  z-index: 11;
  width: 50%;
  text-align: center;
  cursor: pointer;
}
.viewMnemoincContainer .copySeedBTNContainer {
  margin: 0 auto auto;
  width: max-content;
}

@media screen and (max-width: 400px) {
  .viewMnemoincContainer .keyContainer {
    grid-template-columns: 1fr;
  }
}

